--- a/index.html
+++ b/index.html
@@ -10,31 +10,52 @@
   </head>
   <body>
     <header>
-      <div id="popup-header">
-        <div class="popup-content container">
+      <div class="popup-header">
+        <div class="popup-content">
           <div class="logocontainer">
-            <img src="sources/images/logo.png" alt="">
+            <figure>
+              <img src="sources/images/logo.png" alt="">
+            </figure>
             <p>Si pour vous aussi les collaborations ne sont pas un jeu d'enfants, parlons en !</p>
           </div>
-          <div class="">
+          <div class="infos">
             <span>Tél: 0648212608</span>
             <span>Email: alphalab00@gmail.com</span>
             <span>Adresse 19 rue Voltaire,<br>75001 Paris</span>
           </div>
-          <div class="">
-            <span>en savoir plus gâce à notre newsletter</span>
-            <div class="newsform">
-              <form class="" action="index.html" method="post">
-                <input type="text" name="" value="" placeholder="">
-                <input type="submit" name="" value="s'abonner">
+          <div class="subscribe ">
+            <span>En savoir plus grâce à notre newsletter</span>
+
+              <form class="" action="" method="post">
+                <input type="text" name="" value="" placeholder="votre adresse email...">
+                <input type="submit" name="" value="S'abonner">
               </form>
-            </div>
+
           </div>
         </div>
-        <a href="#"><img src="sources/img/cross" alt=""></a>
-
+        <a href="#" id="cross"><img src="sources/images/cross.png" alt=""></a>
       </div>
     </header>
+    <main>
+      <nav id="socials-container" class="container">
+        <h1>
+          <img src="sources/images/logo.png" alt="">
+        </h1>
+        <ul>
+          <li><a href="#"><img src="sources/images/fb-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/tw-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/yt-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/insta-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/lk-picto.png" alt=""></a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <section class="container discover">
+        <h1>Découvrez notre dernière collaboration</h1>
+        <a href="#" class="cta">Commencer l'expérience</a>
 
+      </section>
+    </main>
   </body>
+  <script src="sources/scripts/script.js" charset="utf-8"></script>
 </html>
