--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
         </ul>
       </nav>
       <section class="container discover">
-        <h1>Découvrez notre dernière collaboration</h1>
-        <a href="#" class="cta">Commencer l'expérience</a>
+        <div class="">
+          <h1>Découvrez notre <br>dernière collaboration</h1>
+          <a href="#" class="cta">Commencer l'expérience</a>
+        </div>
+
+      </section>
+      <section class="video-container container">
 
       </section>
     </main>
