--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="sources/styles/reset.css">
     <link rel="stylesheet" href="sources/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Jeu d'enfant</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
             <span>Email: alphalab00@gmail.com</span>
             <span>Adresse 19 rue Voltaire,<br>75001 Paris</span>
           </div>
-          <div class="subscribe ">
+          <div class="subscribe">
             <span>En savoir plus grâce à notre newsletter</span>
 
               <form class="" action="" method="post">
@@ -58,9 +58,39 @@
 
       </section>
       <section class="video-container container">
-
+        <div id="set-height"></div>
+        <p id="time"></p>
+        <video id="v0" tabindex="0" autobuffer="autobuffer" preload="preload">
+          <source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="https://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.webm"></source>
+          <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="https://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source>
+          <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="https://www.html5rocks.com/tutorials/v ideo/basics/Chrome_ImF.mp4"></source>
+          <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
+        </video>
+      </section>
+      <section class="container know-more">
+        <h2>Vous ne voulez pas en arriver là !</h2>
+        <p>C'est pourquoi Kalio a été crééé. <br>
+          Découvrez notre association pour vous aider à mieux penser
+          vos collaborations.
+         </p>
+         <a href="#" class="cta">En savoir plus</a>
       </section>
     </main>
+    <footer>
+      <div class="footer-container container">
+        <ul>
+          <li><a href="#"><img src="sources/images/fb-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/tw-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/yt-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/insta-picto.png" alt=""></a></li>
+          <li><a href="#"><img src="sources/images/lk-picto.png" alt=""></a></li>
+        </ul>
+        <a href="#">Conditions d'utilisation</a>
+        <a href="#">Kit de presse</a>
+        <a href="#">Nous contacter</a>
+      </div>
+    </footer>
   </body>
   <script src="sources/scripts/script.js" charset="utf-8"></script>
+  <script src="sources/scripts/videoControl.js" charset="utf-8"></script>
 </html>
