--- a/index.html
+++ b/index.html
@@ -56,27 +56,35 @@
           <a href="#" class="cta">Commencer l'expérience</a>
         </div>
       </section>
-      <section class="rightvideo">
 
+      <section class="rightvideo">
+        <div class="overlay">
+          <h2>Petit bateau</h2>
+          <p>Célèbre marque textile connue surtout pour les enfants. C'est l'image même de la bienveillance et l'innocence et de l'amusement. Leur fameux slogan disait:
+          </p>
+            <q cite="">"A quoi ça sert d'avoir des vêtements si on peut rien faire dedans?"</q>
+        </div>
         <video id="v0" tabindex="0" autobuffer="autobuffer" preload="preload">
           <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="sources/video/pubPB.mp4"></source>
         </video>
       </section>
+
       <section class="leftvideo">
 
         <video id="v1" tabindex="0" autobuffer="autobuffer" preload="preload">
           <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="sources/video/polanski.mp4"></source>
         </video>
       </section>
-
-      <section class="container know-more">
-        <h2>Vous ne voulez pas en arriver là !</h2>
-        <p>C'est pourquoi Kalio a été crééé. <br>
-          Découvrez notre association pour vous aider à mieux penser
-          vos collaborations.
-         </p>
-         <a href="#" class="cta">En savoir plus</a>
-      </section>
+      <div class="bg-container">
+        <section class="container know-more">
+          <h2>Vous ne voulez pas en arriver là !</h2>
+          <p>C'est pourquoi Kalio a été crééé. <br>
+            Découvrez notre association pour vous aider à mieux penser
+            vos collaborations.
+           </p>
+           <a href="#" class="cta">En savoir plus</a>
+        </section>
+      </div>
     </main>
     <footer>
       <div class="footer-container container">
