--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </header>
     <main>
+      <div class="main-bg">
       <nav id="socials-container" class="container">
         <h1>
           <img src="sources/images/logo.png" alt="">
@@ -55,7 +56,9 @@
           <h1>Découvrez notre <br>dernière collaboration</h1>
           <a href="#" class="cta">Commencer l'expérience</a>
         </div>
+
       </section>
+      </div>
       <section class="container video-container">
         <div class="left-text">
           <h2>Petit bateau</h2>
